@@ -1,0 +1,24 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+
+namespace Patterns.Interpreter
+{
+    public class VariableExpression : IExpression
+    {
+        private string name;
+
+        public VariableExpression(string name)
+        {
+            this.name = name;
+        }
+
+        public string Name { get { return this.name; } }
+
+        public object Evaluate(Context context)
+        {
+            return context.GetValue(this.name);
+        }
+    }
+}
